# FEI_FileReader

./: .cproject  .gitignore  .md5sums  .project  Dockerfile  FEI_FileReader.prf.xml  FEI_FileReader.scd.xml  FEI_FileReader.spd.xml  FEI_FileReader.spec  README.md  build.sh  docker-compose.yml  nodeconfig.py
Docker/: Dockerfile  README.md  docker-compose.yml
DockerFiles/: fei_filereader-node-init.sh
cpp/: .md5sums  FEI_FileReader.cpp  FEI_FileReader.h  FEI_FileReader_base.cpp  FEI_FileReader_base.h  FEI_FileReader_template.cpp  FEI_FileReader_template.h  FileReader.cpp  FileReader.h  FormattedFileReader.cpp  FormattedFileReader.h  Makefile.am  Makefile.am.ide  MappedFileReader.cpp  MappedFileReader.h  MetaFileReader.cpp  MetaFileReader.h  RedHawkFileReader.cpp  RedHawkFileReader.h  ThreadedFileReader.cpp  ThreadedFileReader.h  configure.ac  main.cpp  reconf  struct_props.h
tests/: .md5sums  test_FEI_FileReader.py
